Changelog
=========

5.1-dev - (unreleased)
----------------------

5.0 - (2012-07-30)
------------------
* Bug fix: Fixed deletion of geotags when the user creates a new translation
  [voineali fixes #5390]

4.9 - (2012-07-17)
------------------
* Bug fix: fix preview of geotags widget on edit form when using
  eea.forms
  [ichimdav #5339]

4.8 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n:domain in .pt files
  [prospchr refs #5162]

4.7 - (2012-06-13)
------------------
* Ugrade step: Within ZMI > portal_types > Topic add map_view
  to Available view methods
  [ichimdav #3355]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.geotags
* Feature: Added 'geotags' zCatalog metadata to store the objects
  geographic information on brain in order for this to be used in map views
  [voineali refs #3355]
* Bug fix: display scalebar on map
  [ichimdav #4788]
* Feature: display tags left aligned for the map macros that use the
  version with events variable defined
  [ichimdav #4788]
* Bug fix: fixed eea.alchemy suggestions url to get suggestions for
  the object, instead of the parent folder [batradav]

4.6 - (2012-04-26)
------------------
* Feature: added  modal map as a pop-up for geotags
  [ichimdav #3354]
* Bug fix: Make it work with eea.inidicators aggregated edit
  [voineali #5077]
* Bug fix: fixed so 'title' get saved on the field when 'description' is empty on geonames.org response
  [ghicaale #5008]

4.5 - (2012-03-30)
------------------
* Bug fix: fixed that eea.geotags field on set will convert on the fly strings toward geonames service and
  saves the geoJSON structure. This will also fix the auto-tagging from eea.alchemy
  [ghicaale #5008]
* Feature: eea.geotags widget view macro is now using ArcGIS JavaScript framework to display
  locations on a map
  [ghicaale #3354]
* Feature: the view macro has two options, with map or plain text