@@ -1,0 +1,9 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    xmlns:zcml="http://namespaces.zope.org/zcml"
+    xmlns:browser="http://namespaces.zope.org/browser"
+  i18n_domain="eea">
+
+    <adapter factory=".marshaller.GeotagsField2Surf" />
+
+</configure>
